--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -13,48 +11,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = 'data/'\n",
-    "data_transanctions = data_dir + 'impressions/'"
+    "data_transanctions = data_dir + 'transactions/'\n",
+    "data_clicks = data_dir + 'clicks/'\n",
+    "data_impressions = data_dir + 'impressions/'\n",
+    "data_pageViews = data_dir + 'pageViews/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json(data_transanctions + 'part-10', lines=True)"
+    "# df_transactions = pd.read_json(data_transanctions + 'part-00', lines=True)\n",
+    "# df_clicks = pd.read_json(data_clicks + 'part-00', lines=True)\n",
+    "df_impressions = pd.read_json(data_impressions + 'part-00', lines=True)\n",
+    "# df_pageViews = pd.read_json(data_pageViews + 'part-00', lines=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1418133"
+       "926924"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df)"
+    "len(df_impressions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -62,30 +64,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1418133 entries, 0 to 1418132\n",
+      "Int64Index: 926924 entries, 0 to 926923\n",
       "Data columns (total 10 columns):\n",
-      "ab           1418133 non-null object\n",
-      "algRef       1418133 non-null int64\n",
-      "feature      1418133 non-null int64\n",
-      "id           1418133 non-null int64\n",
-      "info         1418133 non-null object\n",
-      "page         1418133 non-null object\n",
-      "products     1418133 non-null object\n",
-      "timestamp    1418133 non-null datetime64[ns]\n",
-      "type         1418133 non-null object\n",
-      "vrlId        1418133 non-null int64\n",
+      "ab           926924 non-null object\n",
+      "algRef       926924 non-null int64\n",
+      "feature      926924 non-null int64\n",
+      "id           926924 non-null int64\n",
+      "info         926924 non-null object\n",
+      "page         926924 non-null object\n",
+      "products     926924 non-null object\n",
+      "timestamp    926924 non-null datetime64[ns]\n",
+      "type         926924 non-null object\n",
+      "vrlId        926924 non-null int64\n",
       "dtypes: datetime64[ns](1), int64(4), object(5)\n",
-      "memory usage: 1.1 GB\n"
+      "memory usage: 611.3 MB\n"
      ]
     }
    ],
    "source": [
-    "df.info(memory_usage='deep')"
+    "df_impressions.info(memory_usage='deep')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -124,66 +126,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>D/8719707203551170428</td>\n",
-       "      <td>-7316380623456322413</td>\n",
-       "      <td>5603092165415881620</td>\n",
+       "      <td>G/7849515658654400358</td>\n",
+       "      <td>5321418768591000592</td>\n",
+       "      <td>-7828424103269057573</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>{'geoIPLongitude': '-43.9333', 'os': 'iOS 10.3...</td>\n",
-       "      <td>category</td>\n",
-       "      <td>[8678803998682917511, 268116511737437555]</td>\n",
-       "      <td>2017-08-29 17:12:37</td>\n",
+       "      <td>{'browserId': 2077291510979737164, 'browser': ...</td>\n",
+       "      <td>product</td>\n",
+       "      <td>[3653391013242405988, 3492582560532754791]</td>\n",
+       "      <td>2017-08-26 00:05:22</td>\n",
        "      <td>viewreclog</td>\n",
        "      <td>8765249957191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>G/6816804666485159823</td>\n",
+       "      <td>E/-9206771770294839467</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>-4092588031201132965</td>\n",
+       "      <td>5603092165415881620</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>{'geoIPLongitude': '-43.2192', 'os': 'Windows ...</td>\n",
-       "      <td>product</td>\n",
-       "      <td>[-2550759271350632785, -3322577426425946355, -...</td>\n",
-       "      <td>2017-08-29 17:12:37</td>\n",
+       "      <td>{'browserId': -5794300198289426830, 'browser':...</td>\n",
+       "      <td>search</td>\n",
+       "      <td>[1983875142539570898, -1617532069770397932]</td>\n",
+       "      <td>2017-08-26 00:05:22</td>\n",
        "      <td>viewreclog</td>\n",
        "      <td>8765249957191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>D/4298610455670770677</td>\n",
+       "      <td>B/5469036284027064790</td>\n",
+       "      <td>-7316380623456322413</td>\n",
+       "      <td>5603092165415881620</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>-4092588031201132965</td>\n",
-       "      <td>8765249957191</td>\n",
-       "      <td>{'geoIPLongitude': '-43.2192', 'os': 'Windows ...</td>\n",
-       "      <td>product</td>\n",
-       "      <td>[-4446465370530668566, -8541199829215487257, 7...</td>\n",
-       "      <td>2017-08-29 17:12:38</td>\n",
+       "      <td>{'browserId': -5824671029704807593, 'browser':...</td>\n",
+       "      <td>category</td>\n",
+       "      <td>[8345817602690948093, -4685433540937644115]</td>\n",
+       "      <td>2017-08-26 00:05:22</td>\n",
        "      <td>viewreclog</td>\n",
        "      <td>8765249957191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>D/4298610455670770677</td>\n",
+       "      <td>H/1514327774359276100</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>6534989628677096963</td>\n",
+       "      <td>-4092588031201132965</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>{'geoIPLongitude': '-43.2192', 'os': 'Windows ...</td>\n",
+       "      <td>{'browserId': 803065015979834204, 'browser': '...</td>\n",
        "      <td>product</td>\n",
-       "      <td>[5171896055566725421, 6731911892448046114]</td>\n",
-       "      <td>2017-08-29 17:12:38</td>\n",
+       "      <td>[4339435368953319849, -655160631340267337]</td>\n",
+       "      <td>2017-08-26 00:05:23</td>\n",
        "      <td>viewreclog</td>\n",
        "      <td>8765249957191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>D/4298610455670770677</td>\n",
+       "      <td>A/-5014290602732537686</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>6534989628677096963</td>\n",
+       "      <td>-4092588031201132965</td>\n",
        "      <td>8765249957191</td>\n",
-       "      <td>{'geoIPLongitude': '-43.2192', 'os': 'Windows ...</td>\n",
+       "      <td>{'browserId': -7681599627122648286, 'browser':...</td>\n",
        "      <td>product</td>\n",
-       "      <td>[112687202880543866, 228696965905064958]</td>\n",
-       "      <td>2017-08-29 17:12:38</td>\n",
+       "      <td>[2106426664978872773, 1141620332716626693, -64...</td>\n",
+       "      <td>2017-08-26 00:05:23</td>\n",
        "      <td>viewreclog</td>\n",
        "      <td>8765249957191</td>\n",
        "    </tr>\n",
@@ -192,26 +194,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                      ab               algRef              feature  \\\n",
-       "0  D/8719707203551170428 -7316380623456322413  5603092165415881620   \n",
-       "1  G/6816804666485159823        8765249957191 -4092588031201132965   \n",
-       "2  D/4298610455670770677        8765249957191 -4092588031201132965   \n",
-       "3  D/4298610455670770677        8765249957191  6534989628677096963   \n",
-       "4  D/4298610455670770677        8765249957191  6534989628677096963   \n",
+       "                       ab               algRef              feature  \\\n",
+       "0   G/7849515658654400358  5321418768591000592 -7828424103269057573   \n",
+       "1  E/-9206771770294839467        8765249957191  5603092165415881620   \n",
+       "2   B/5469036284027064790 -7316380623456322413  5603092165415881620   \n",
+       "3   H/1514327774359276100        8765249957191 -4092588031201132965   \n",
+       "4  A/-5014290602732537686        8765249957191 -4092588031201132965   \n",
        "\n",
        "              id                                               info      page  \\\n",
-       "0  8765249957191  {'geoIPLongitude': '-43.9333', 'os': 'iOS 10.3...  category   \n",
-       "1  8765249957191  {'geoIPLongitude': '-43.2192', 'os': 'Windows ...   product   \n",
-       "2  8765249957191  {'geoIPLongitude': '-43.2192', 'os': 'Windows ...   product   \n",
-       "3  8765249957191  {'geoIPLongitude': '-43.2192', 'os': 'Windows ...   product   \n",
-       "4  8765249957191  {'geoIPLongitude': '-43.2192', 'os': 'Windows ...   product   \n",
+       "0  8765249957191  {'browserId': 2077291510979737164, 'browser': ...   product   \n",
+       "1  8765249957191  {'browserId': -5794300198289426830, 'browser':...    search   \n",
+       "2  8765249957191  {'browserId': -5824671029704807593, 'browser':...  category   \n",
+       "3  8765249957191  {'browserId': 803065015979834204, 'browser': '...   product   \n",
+       "4  8765249957191  {'browserId': -7681599627122648286, 'browser':...   product   \n",
        "\n",
        "                                            products           timestamp  \\\n",
-       "0          [8678803998682917511, 268116511737437555] 2017-08-29 17:12:37   \n",
-       "1  [-2550759271350632785, -3322577426425946355, -... 2017-08-29 17:12:37   \n",
-       "2  [-4446465370530668566, -8541199829215487257, 7... 2017-08-29 17:12:38   \n",
-       "3         [5171896055566725421, 6731911892448046114] 2017-08-29 17:12:38   \n",
-       "4           [112687202880543866, 228696965905064958] 2017-08-29 17:12:38   \n",
+       "0         [3653391013242405988, 3492582560532754791] 2017-08-26 00:05:22   \n",
+       "1        [1983875142539570898, -1617532069770397932] 2017-08-26 00:05:22   \n",
+       "2        [8345817602690948093, -4685433540937644115] 2017-08-26 00:05:22   \n",
+       "3         [4339435368953319849, -655160631340267337] 2017-08-26 00:05:23   \n",
+       "4  [2106426664978872773, 1141620332716626693, -64... 2017-08-26 00:05:23   \n",
        "\n",
        "         type          vrlId  \n",
        "0  viewreclog  8765249957191  \n",
@@ -221,23 +223,23 @@
        "4  viewreclog  8765249957191  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_impressions.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.select_dtypes(include=['object']).describe()"
+   ]
   }
  ],
  "metadata": {
@@ -256,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
