Adding TODO indicating where I would plot everything.

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -1875,17 +1875,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_plot = impressions_by_algRef.index\n",
-    "y_plot = impressions_by_algRef['impressions']\n",
-    "plot_barchat(x_plot,y_plot,'h','Impressions','Impressions by Algorithm')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2731,6 +2720,15 @@
    ],
    "source": [
     "revenue_by_user.sort_values(by='count', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO - Plot everything"
    ]
   },
   {
